# Programmazione-e-calcolo-scientifico

./: esercizio1.txt
esercitazione1/: CMakeLists.txt  codice_esercitazione_1.cpp  prog  testo_es_1.txt
esercitazione2/: CMakeLists.txt  codice_esercitazione_2.cpp
esercitazione3/: codice_esercitazione_3.cpp  programma
esercitazione4/: CMakeLists.txt  codice_esercitazione_4.cpp  prog  randfiller.h  timecounter.h
esercitazione5/: CMakeLists.txt  codice_esercitazione_5.cpp  considerazioni.txt  testo.txt
esercitazione5/build_debug/: CMakeCache.txt  Makefile  avvio  cmake_install.cmake
esercitazione5/build_release/: CMakeCache.txt  Makefile  avvio  cmake_install.cmake
